# labs-jmacey

./: .gitignore  README.md
DLA/: CMakeLists.txt  main.py  pyproject.toml
DLA/include/: Walker.h
DLA/src/: Image.cpp  Walker.cpp  main.cpp
Image/: CMakeLists.txt  pyproject.toml
Image/include/: Image.h
Image/src/: Image.cpp  main.cpp
Image/src/image/: Image.py  __init__.py
Image/tests/: ImageTests.cpp  test_image.py
ImageTest/: main.py  pyproject.toml
Particle/: CMakeLists.txt  Emitter.py  Particle.py  README.md  Random.py  Vec3.py  main.py  pyproject.toml
Particle/include/: Emitter.h  Particle.h  Vec3.h
Particle/src/: Emitter.cpp  Random.cpp  Vec3.cpp  main.cpp
Particle/tests/: ParticleTests.cpp  test_Emitter.py  test_Vec3.py  test_particle.py
ParticleNumpy/: Emitter.py  main.py  pyproject.toml
ParticleNumpy/shaders/: ParticleFragment.glsl  ParticleVertex.glsl
Vec3Class/: main.py  pyproject.toml  vec3.py
Vec3Class/tests/: test_vec3.py
